account for the possible margin size change on plasma theme change in IconView and ListView move m_itemFrame to AbstractItemView; code duplication--

BUG:290694
FIXED-IN:4.8